# CardapioRapido_project

./: .gitignore  manage.py  pyproject.toml  vercel.json
CardapioRapido_project/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py  tests.py
accounts/migrations/: 0001_initial.py
core/: models.py  tests.py
core/migrations/: 0001_initial.py
loyalty/: admin.py  models.py
loyalty/migrations/: 0001_initial.py
notifications/: admin.py  models.py
notifications/migrations/: 0001_initial.py
orders/: admin.py  apps.py  models.py
orders/api/: serializers.py  urls_api.py  viewsets.py
orders/migrations/: 0001_initial.py  0002_alter_orderitemaddon_options_and_more.py  0003_alter_orderitem_quantity.py
orders/tests/: test_cart.py
products/: admin.py  models.py
products/api/: serializers.py  urls_api.py  viewsets.py
products/migrations/: 0001_initial.py
reviews/: models.py
reviews/migrations/: 0001_initial.py
stores/: admin.py  models.py
stores/api/: serializers.py  urls_api.py  viewsets.py
stores/migrations/: 0001_initial.py  0002_alter_store_name.py  0003_store_slug.py  0004_store_banner_store_logo.py  0005_alter_store_created_at.py
